Fixed up title spacing

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -67,10 +67,11 @@ $color6: #f3f3ec93;
             font-family: 'Ubuntu', sans-serif;
             transition-duration: 1s;
             font-size: 250%;
-            font-weight: 700;
+            font-weight: 600;
             width: auto;
             padding: 1% 5% 1% 1.5%;
             transform: skew(5deg);
+            letter-spacing: 13px;
         }
         ul{
             padding: 0px;
